<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.ui.fragment.SignUpFragment">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/black"
        android:fitsSystemWindows="true"
        >
        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="@dimen/dimen_50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:src="@drawable/voyd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="REGISTER"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_25dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:hint="@string/all_please_enter_email_address"
                app:backgroundTint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:errorTextColor="@color/white"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/background_dark"
                    android:textCursorDrawable="@color/black"
                    android:visibility="visible"
                    app:backgroundTint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:layout_marginTop="@dimen/margin_10"
                app:backgroundTint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:passwordToggleEnabled="true"
                app:errorTextColor="@color/white"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/fragment_email"
                app:layout_constraintStart_toStartOf="@+id/fragment_email"
                app:layout_constraintTop_toBottomOf="@+id/fragment_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_dark"
                    android:textCursorDrawable="@color/black"
                    android:visibility="visible"
                    app:backgroundTint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_your_password"
                android:layout_marginTop="@dimen/margin_10"
                app:backgroundTint="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidth="0dp"
                app:passwordToggleEnabled="true"
                app:errorTextColor="@color/white"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/fragment_password"
                app:layout_constraintStart_toStartOf="@+id/fragment_password"
                app:layout_constraintTop_toBottomOf="@+id/fragment_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColor="@android:color/background_dark"
                    android:textCursorDrawable="@color/black"
                    android:visibility="visible"
                    app:backgroundTint="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/register"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:text="@string/sign_up"
                android:layout_marginTop="@dimen/dimen_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/fragment_password"
                app:layout_constraintTop_toBottomOf="@+id/fragment_confirm_password" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:textColor="@color/white"
                android:text="Already a member? Login"
                app:layout_constraintEnd_toEndOf="@+id/register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>